objects/Ad_View__c.object
<CustomObject>
    <fields>
        <fullName>Advertiser__c</fullName>
        <formula>Nielsen_Brand__r.Nielsen_Parent_Company__r.Advertiser__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equiv_30__c</fullName>
        <label>Equiv :30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Name__c</fullName>
        <formula>Nielsen_Brand__r.Nielsen_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nielsen Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nielsen Brand</label>
        <referenceTo>Nielsen_Brand__c</referenceTo>
        <relationshipLabel>Ad Views</relationshipLabel>
        <relationshipName>Ad_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nielsen_Parent_Company_Name__c</fullName>
        <formula>Nielsen_Brand__r.Nielsen_Parent_Company__r.Nielsen_Parent_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nielsen Parent Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipName>AD_Views</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>Start of quarter</description>
        <label>Week</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Ad Views</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Equiv_30__c</columns>
        <columns>NAME</columns>
        <columns>Nielsen_Parent_Company_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>greaterThan</operation>
            <value>3/30/2015</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BounceTV</fullName>
        <columns>Equiv_30__c</columns>
        <columns>NAME</columns>
        <columns>Nielsen_Parent_Company_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>3/30/2015</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>BounceTV</value>
        </filters>
        <label>BounceTV</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>Ad Views Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>